# test_ctypes

./: CMakeLists.txt  README.md
include/: test_ctypes.h
python/: test_ctypes.py
src/: test_ctypes.c
